refactor: melhoria na implementação do css
Alteração do código css in-line, para incorporado.
Até essa aula não tínhamos visto css, por isso justifica o uso do css in-line, agora que sabemos que devemos evitar esse tipo de implementação, usei o incorporado.

--- a/exercicios/Exercicios_Aula2/exercicio01.html
+++ b/exercicios/Exercicios_Aula2/exercicio01.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tags básicas HTML</title>
+    <style>
+        #marcaTexto{
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
     <h2>Exemplo HTML 5</h2>
@@ -22,7 +27,7 @@
     <h3>Dicas para ter sucesso nos estudos:</h3>
     <ol>
         <li>
-            Pratique pelo menos <span style="background-color: yellow;">25 minutos</span> todos os dias
+            Pratique pelo menos <span id="marcaTexto">25 minutos</span> todos os dias
         </li>
         <li>
             <strong>Estude</strong> com conteúdo estruturado
