feat: exercícios-aula03

--- a/exercicios/Exercicios_Aula3/exercicio02/exercicio2.html
+++ b/exercicios/Exercicios_Aula3/exercicio02/exercicio2.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
-Em um arquivo HTML, acrescente um vídeo disponível no Youtube sobre 
-pensamento computacional e um texto sucinto que explique este conceito. 
-Consulte o material para verificar como adicionar o vídeo na página sem ter que 
-baixar, somente colocando a referência.
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pensamento Computacional</title>
 </head>
+
 <body>
     <main>
         <h1>Pensamento Computacional</h1>
-        <iframe width="853" height="480" src="https://www.youtube.com/embed/KxppXrcfMBA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>texto sobre Pensamento computacional</p>
+        <iframe width="853" height="480" src="https://www.youtube.com/embed/KxppXrcfMBA" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        <p>"O Pensamento Computacional é uma distinta capacidade criativa, crítica e estratégica humana de saber
+            utilizar os fundamentos da Computação,<br>
+            nas mais diversas áreas do conhecimento, com a finalidade de identificar e resolver problemas, de maneira
+            individual ou colaborativa,<br>
+            através de passos claros, de tal forma que uma pessoa ou uma máquina possam executá-los eficazmente".
+            (BRACKMANN, 2017)</p>
     </main>
 
 </body>
+
 </html>
