--- a/exercicios/Exercicios_Aula3/exercicio03/exercicio3.html
+++ b/exercicios/Exercicios_Aula3/exercicio03/exercicio3.html
@@ -52,8 +52,13 @@ letra da música.
         Peço desculpas <br>
         Se tu me ouvires cantando <br>
         Que eu te amo, pois, meu vício <br>
-        És tu meu amor <br>
+        És tu meu amor <br> <br>
+
+        <audio controls>
+            <source src="audio/meu_martirio.ogg" type="audio/ogg">
+        </audio>
     </main>
+
 
 </body>
 
