--- a/exercicios/Exercicios_Aula3/exercicio04/paginas-exercicio4/index.html
+++ b/exercicios/Exercicios_Aula3/exercicio04/paginas-exercicio4/index.html
@@ -11,9 +11,10 @@
     <h1>Página Home</h1>
     <nav>
         <a href="index.html">Home</a>
-        <a href="receita.html">Home</a>
-        <a href="video.html">Home</a>
-        <a href="contato.html">Home</a>
+        <a href="receita.html">Receita</a>
+        <a href="video.html">Video</a>
+        <a href="contato.html">Contato</a>
     </nav>
+    <br>
 </body>
 </html>
