--- a/exercicios/Exercicios_Aula3/exercicio04/paginas-exercicio4/receita.html
+++ b/exercicios/Exercicios_Aula3/exercicio04/paginas-exercicio4/receita.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    • Na página Receita insira a descrição completa de uma receita de comida e o componente de 
-áudio para o usuário ouvir a receita, caso a mesma esteja disponível, caso contrário, grave 
-você mesmo um arquivo de áudio descrevendo a receita.
 </head>
+
 <body>
-    <h1>Carne seca na pressão</h1>
     <nav>
         <a href="index.html">Home</a>
-        <a href="receita.html">Home</a>
-        <a href="video.html">Home</a>
-        <a href="contato.html">Home</a>
+        <a href="receita.html">Receita</a>
+        <a href="video.html">Video</a>
+        <a href="contato.html">Contato</a>
     </nav>
     <main>
+        <h1>Carne seca na pressão</h1>
         <article>
-            <li>
-                <ul>
-                    Em uma panela de pressão refogue o alho, a cebola, acrescente a carne seca já sem sal.
-                </ul>
+            <ul>
+                <li>Em uma panela de pressão refogue o alho, a cebola, acrescente a carne seca já sem sal.</li>
+                <li>Leve para cozinhar por 35 minutos, retire do fogo, faça um refogado com o restante do tempero.</li>
+                <li>Coloque a carne, as batatas, leve ao fogo por mais 10 minutos.</li>
+                <li>Coloque o tempero misto e deixe por 5 minutos.</li>
+                <li>Servir com arroz branco, serve 3 pessoas.</li>
             </li>
-    Leve para cozinhar por 35 minutos, retire do fogo, faça um refogado com o restante do tempero.
-    Coloque a carne, as batatas, leve ao fogo por mais 10 minutos.
-    Coloque o tempero misto e deixe por 5 minutos.
-    Servir com arroz branco, serve 3 pessoas.
 
         </article>
     </main>
 </body>
+
 </html>
