--- a/exercicios/Exercicios_Aula3/exercicio04/paginas-exercicio4/video.html
+++ b/exercicios/Exercicios_Aula3/exercicio04/paginas-exercicio4/video.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    • Na página index (inicial) insira somente o nome do site (pode ter imagens) e quatro links 
-(HOME | Receita | Vídeo | Contato)
 </head>
 <body>
-    <h1>Página Home</h1>
+    <h1>Video da receita</h1>
     <nav>
         <a href="index.html">Home</a>
-        <a href="receita.html">Home</a>
-        <a href="video.html">Home</a>
-        <a href="contato.html">Home</a>
+        <a href="receita.html">Receita</a>
+        <a href="video.html">Video</a>
+        <a href="contato.html">Contato</a>
     </nav>
+    <br>
+    <main>
+        <iframe width="660" height="371" src="https://www.youtube.com/embed/RlJesU-01po" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </main>
 </body>
 </html>
