--- a/exercicios/Exercicios_Aula3/exercicio04/exercicio4.html
+++ b/exercicios/Exercicios_Aula3/exercicio04/exercicio4.html
@@ -15,6 +15,8 @@ os atributos do HTML5.
     <title>Site receita</title>
 </head>
 <body>
-    
+    <nav>
+        <a href="paginas-exercicio4/index.html">Site receitas</a>
+    </nav>
 </body>
 </html>
