--- a/exercicios/Exercicios_Aula3/exercicio04/paginas-exercicio4/contato.html
+++ b/exercicios/Exercicios_Aula3/exercicio04/paginas-exercicio4/contato.html
@@ -4,16 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    • Na página index (inicial) insira somente o nome do site (pode ter imagens) e quatro links 
-(HOME | Receita | Vídeo | Contato)
 </head>
 <body>
-    <h1>Página Home</h1>
+    <h1>Contato</h1>
     <nav>
         <a href="index.html">Home</a>
-        <a href="receita.html">Home</a>
-        <a href="video.html">Home</a>
-        <a href="contato.html">Home</a>
+        <a href="receita.html">Receita</a>
+        <a href="video.html">Video</a>
+        <a href="contato.html">Contato</a>
     </nav>
+    <form action="">
+        <h2>Entre em contato</h2>
+        Nome <input type="text" name="nome" id=""> <br>
+        E-mail: <input type="email" name="email" id=""> <br>
+        Gênero: <br>
+        <input type="radio" name="genero" id="" value="Feminino"> Feminino<br>
+        <input type="radio" name="genero" id="" value="Masculino"> Masculino<br>
+        Como ficou sabendo do site: <select name="divulgacao" id="">
+            <option value=""></option>
+            <option value="google">Google</option>
+            <option value="blog">Blog de receitas</option>
+            <option value="app">Aplicativo de receitas</option>
+            <option value="outros">Outros</option>
+        </select> <br>
+        O que mais gostou na receita: <br>
+        <input type="checkbox" name="tempo" id=""> Tempo <br>
+        <input type="checkbox" name="facilidade" id=""> Facilidade <br>
+        <input type="checkbox" name="rendimento" id=""> Rendimento <br>
+        <input type="button" value="Enviar">
+    </form>
 </body>
 </html>
