:rocket:  exercício01 - aula06

--- a/exercicios/Exercicios_Aula6/index.html
+++ b/exercicios/Exercicios_Aula6/index.html
@@ -14,38 +14,40 @@
 
         <article class="box">
             <figure>
-                <img src="" alt="">
-                <figcaption></figcaption>
+                <img src="imagens/fuu-j-YCWiLeE-pFw-unsplash.jpg" alt="">
+                <figcaption>Photo by Fuu J</figcaption>
             </figure>
             <hr>
-            <h2></h2>
+            <h2><a href="https://unsplash.com/@fuuj?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Fuu J</a></h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, numquam! Reiciendis illum nam odit necessitatibus porro? Provident esse voluptates natus perspiciatis, minima quam excepturi similique tempora, unde, velit ipsa assumenda!
             </p>
-            <a href="#">Foto</a>
+            <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Foto</a>
         </article>
 
         <article class="box">
             <figure>
-                <img src="" alt="">
-                <figcaption></figcaption>
+                <img src="imagens/nathan-anderson-Bu9pyEZyA9s-unsplash.jpg" alt="">
+                <figcaption>Nathan Anderson</figcaption>
             </figure>
             <hr>
-            <h2></h2>
+            <h2><a href="https://unsplash.com/@nathananderson?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Nathan Anderson</a>
+            </h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, numquam! Reiciendis illum nam odit necessitatibus porro? Provident esse voluptates natus perspiciatis, minima quam excepturi similique tempora, unde, velit ipsa assumenda!
             </p>
-            <a href="#">Foto</a>
+            <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Foto</a>
         </article>
 
         <article class="box">
             <figure>
-                <img src="" alt="">
-                <figcaption></figcaption>
+                <img src="imagens/martin-olsson-Hui7hHJtils-unsplash.jpg" alt="">
+                <figcaption>Martin Olsson</figcaption>
             </figure>
             <hr>
-            <h2></h2>
+            <h2><a href="https://unsplash.com/@martinnolsson?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Martin Olsson</a>
+            </h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, numquam! Reiciendis illum nam odit necessitatibus porro? Provident esse voluptates natus perspiciatis, minima quam excepturi similique tempora, unde, velit ipsa assumenda!
             </p>
-            <a href="#">Foto</a>
+            <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Foto</a>
         </article>
 
     </main>
