:rocket: exercícios aula03

--- a/exercicios/Exercicios_Aula3/exercicio04/paginas-exercicio4/receita.html
+++ b/exercicios/Exercicios_Aula3/exercicio04/paginas-exercicio4/receita.html
@@ -24,7 +24,10 @@
                 <li>Coloque o tempero misto e deixe por 5 minutos.</li>
                 <li>Servir com arroz branco, serve 3 pessoas.</li>
             </li>
-
+            <br>
+            <audio controls>
+                <source src="audio/receita.ogg" type="audio/ogg">
+            </audio>
         </article>
     </main>
 </body>
