:rocket: alinhamento das figuras, animação de sombras

--- a/exercicios/Exercicios_Aula7/Exercícios_base(1)/Exercícios_base/Exer1/index.html
+++ b/exercicios/Exercicios_Aula7/Exercícios_base(1)/Exercícios_base/Exer1/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <main>
+    <main class="container">
         <section class="bloco">
             <figure>
                 <img src="imagens/img1.jpg" alt="">
@@ -32,7 +32,6 @@
                 <img src="imagens/img6.jpg" alt="">
             </figure>
             <figure>
-            <figure>
                 <img src="imagens/img7.jpg" alt="">
             </figure>
             <figure>
@@ -47,7 +46,6 @@
             <figure>
                 <img src="imagens/img10.jpg" alt="">
             </figure>
-            <figure>
             <figure>
                 <img src="imagens/img11.jpg" alt="">
             </figure>
