:rocket:  animação rotação

--- a/exercicios/Exercicios_Aula7/Exercícios_base(1)/Exercícios_base/Exer1/index.html
+++ b/exercicios/Exercicios_Aula7/Exercícios_base(1)/Exercícios_base/Exer1/index.html
@@ -10,47 +10,47 @@
 <body>
     <main class="container">
         <section class="bloco">
-            <figure>
-                <img src="imagens/img1.jpg" alt="">
+            <figure class="card">
+                <img src="imagens/img1.jpg" alt="" class="side">
             </figure>
-            <figure>
-                <img src="imagens/img2.jpg" alt="">
+            <figure class="card">
+                <img src="imagens/img2.jpg" alt="" class="side">
             </figure>
-            <figure>
-                <img src="imagens/img3.jpg" alt="">
+            <figure class="card">
+                <img src="imagens/img3.jpg" alt="" class="side">
             </figure>
-            <figure>
-                <img src="imagens/img4.jpg" alt="">
-            </figure>
-        </section>
-
-        <section class="bloco">
-            <figure>
-                <img src="imagens/img5.jpg" alt="">
-            </figure>
-            <figure>
-                <img src="imagens/img6.jpg" alt="">
-            </figure>
-            <figure>
-                <img src="imagens/img7.jpg" alt="">
-            </figure>
-            <figure>
-                <img src="imagens/img8.jpg" alt="">
+            <figure class="card">
+                <img src="imagens/img4.jpg" alt="" class="side">
             </figure>
         </section>
 
         <section class="bloco">
-            <figure>
-                <img src="imagens/img9.jpg" alt="">
+            <figure class="card">
+                <img src="imagens/img5.jpg" alt="" class="side">
             </figure>
-            <figure>
-                <img src="imagens/img10.jpg" alt="">
+            <figure class="card">
+                <img src="imagens/img6.jpg" alt="" class="side">
             </figure>
-            <figure>
-                <img src="imagens/img11.jpg" alt="">
+            <figure class="card">
+                <img src="imagens/img7.jpg" alt="" class="side">
             </figure>
-            <figure>
-                <img src="imagens/img12.jpg" alt="">
+            <figure class="card">
+                <img src="imagens/img8.jpg" alt="" class="side">
+            </figure>
+        </section>
+
+        <section class="bloco">
+            <figure class="card">
+                <img src="imagens/img9.jpg" alt="" class="side">
+            </figure>
+            <figure class="card">
+                <img src="imagens/img10.jpg" alt="" class="side">
+            </figure>
+            <figure class="card">
+                <img src="imagens/img11.jpg" alt="" class="side">
+            </figure>
+            <figure class="card">
+                <img src="imagens/img12.jpg" alt="" class="side">
             </figure>
         </section>
     </main>
