--- a/exercicios/Exercicios_Aula7/Exercícios_base(1)/Exercícios_base/Exer2/index.html
+++ b/exercicios/Exercicios_Aula7/Exercícios_base(1)/Exercícios_base/Exer2/index.html
@@ -23,11 +23,29 @@
         </li>
         <li>
             <img src="imagens/img5.jpg" width="480" height="322" />5
+        </li>  
+        <li>
+            <img src="imagens/img6.jpg" width="480" height="322" />6
+        </li>  
+        <li>
+            <img src="imagens/img7.jpg" width="480" height="322" />7
+        </li>    
+        <li>
+            <img src="imagens/img8.jpg" width="480" height="322" />8
+        </li> 
+        <li>
+            <img src="imagens/img9.jpg" width="480" height="322" />9
+        </li> 
+        <li>
+            <img src="imagens/img10.jpg" width="480" height="322" />10
         </li>   
     </ul>
     <div class="copyright">
         &copy; <a href="http://webreflection.blogspot.com/">Andrea Giammarchi</a> <a href="http://www.w3.org/TR/css3-roadmap/">CSS3</a> transictions example for one <a href="http://ajaxian.com/">Ajaxian</a> post. Original images from <a href="http://demo.tutorialzine.com/">Tutorialzine</a>
+        <!-- fotos baixadas no site Unsplash -->
+        <br>Photo by <a href="https://unsplash.com/@spencerdavis?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Spencer Davis</a> on <a href="https://unsplash.com/s/photos/egyptian?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
     </div>
+    
 </body>
 
 </html>
