--- a/exercicios/projeto_final/Projeto/index.html
+++ b/exercicios/projeto_final/Projeto/index.html
@@ -23,6 +23,364 @@
         <a href="#">Menu</a>
     </nav>
     <main>
+        <section id="content">
+            <section id="Carnes/Frango">
+                <h1>Carnes / Frango</h1>
+                <figure>
+                    <img src="imagens/img1.png" width="50px">
+                </figure>
+                <figcaption>Picanha Friboi tradicional peça a vácuo kg57,99</figcaption>
+                <figure>
+                    <img src="imagens/img2.png" width="50px">
+                </figure>
+                <figcaption>Fraldinha Friboi peça kg
+                    36,99</figcaption>
+                <figure>
+                    <img src="imagens/img3.png" width="50px">
+                </figure>
+                <figcaption>Contrafilé pedaço kg
+                    41,99</figcaption>
+                <figure>
+                    <img src="imagens/img4.png" width="50px">
+                </figure>
+                <figcaption>Paleta de cordeiro Do Chef congelada peça kg
+                    45,99</figcaption>
+                <figure>
+                    <img src="imagens/img5.png" width="50px">
+                </figure>
+                <figcaption>Cupim Friboi pedaço kg
+                    36,99
+                    </figcaption>
+                <figure>
+                    <img src="imagens/img6.png" width="50px">
+                </figure>
+                <figcaption>Picanha suína Pamplona temperada resfriada peça kg
+                    26,99</figcaption>
+                <figure>
+                    <img src="imagens/img7.png" width="50px">
+                </figure>
+                <figcaption>Costela suína Perdigão a granel kg
+                    21,99</figcaption>
+                <figure>
+                    <img src="imagens/img8.png" width="50px">
+                </figure>
+                <figcaption>Bisteca suína Sadia a granel kg
+                    17,99</figcaption>
+                <figure>
+                    <img src="imagens/img9.png" width="50px">
+                </figure>
+                <figcaption>Coxinha da asa de frango a granel kg
+                    14,99</figcaption>
+                <figure>
+                    <img src="imagens/img10.png" width="50px">
+                </figure>
+                <figcaption>Linguiça toscana Seara a granel kg
+                    15,29
+                    </figcaption>
+                <figure>
+                    <img src="imagens/img11.png" width="50px">
+                </figure>
+                <figcaption>Linguiça calabresa defumada Seara a granel kg 18,59</figcaption>
+        </section> 
+        <hr>
+        <section id="Margarinas">
+                <h1>Margarinas</h1>
+                <figure>
+                    <img src="imagens/img12.png" width="50px">
+                </figure>
+                <figcaption>Margarina Qualy tradicional 500 g
+                    4,99</figcaption>
+        </section>
+        <hr>
+        <section id="Graos">
+                <h1>Grãos</h1>
+                <figure>
+                    <img src="imagens/img13.png" width="50px">
+                </figure>
+                <figcaption>Arroz branco Blue Ville tipo 1 5 kg
+                    22,98</figcaption>
+        </section>
+        <hr>
+        <section id="Temperos">
+                <figure>
+                    <img src="imagens/img14.png" width="50px">
+                </figure>
+                <figcaption>Azeite de oliva Gallo clássico extra virgem vidro 500 ml
+                    19,99
+                    </figcaption>
+        </section>
+        <hr>
+        <section id="Doces">
+            <h1>Doces</h1>
+                <figure>
+                    <img src="imagens/img15.png" width="50px">
+                </figure>
+                <figcaption>Leite condensado Moça semidesnatado TP 395 g
+                    4,69</figcaption>
+                <figure>
+                    <img src="imagens/img16.png" width="50px">
+                </figure>
+                <figcaption>Chocolate em tablete Lacta sabores 90 g
+                    4,19</figcaption>
+                <figure>
+                    <img src="imagens/img17.png" width="50px">
+                </figure>
+                <figcaption>Chocolate Lindt Lindor Milk ou Swiss Classic 100 g
+                    19,90
+                    </figcaption>
+        </section>
+        <hr>
+        <section id="Bebidas">
+                <h1>Bebidas</h1>
+                <figure>
+                    <img src="imagens/img18.png" width="50px">
+                </figure>
+                <figcaption>Refrigerante H2OH! sabores pet 1,5 L
+                    4,99</figcaption>
+                <figure>
+                    <img src="imagens/img19.png" width="50px">
+                </figure>
+                <figcaption>Cerveja Bohemia puro malte lata 350 ml
+                    2,49</figcaption>
+                <figure>
+                    <img src="imagens/img20.png" width="50px">
+                </figure>
+                <figcaption>Vinho Espumante Casa Perini moscatel branco 750 ml
+                    46,99
+                    </figcaption>
+                <figure>
+                    <img src="imagens/img21.png" width="50px">
+                </figure>
+                <figcaption>Vinho Espumante Salton moscatel branco 750 ml
+                    29,90</figcaption>
+                <figure>
+                    <img src="imagens/img22.png" width="50px">
+                </figure>
+                <figcaption>Vinho Salton Intenso merlot tinto 750 ml
+                    31,90</figcaption>
+                <figure>
+                    <img src="imagens/img23.png" width="50px">
+                </figure>
+                <figcaption>Vinho Frisante Mioranza suave rosé 750 ml
+                    19,90
+                    </figcaption>
+                <figure>
+                    <img src="imagens/img24.png" width="50px">
+                </figure>
+                <figcaption>Vinho Frances Bois Mirail Rouge tinto 750 ml
+                    31,90</figcaption>
+                <figure>
+                    <img src="imagens/img25.png" width="50px">
+                </figure>
+                <figcaption>Vinho Chileno Tres Toros cabernet sauvignon tinto 750 ml
+                    29,90</figcaption>
+                <figure>
+                    <img src="imagens/img26.png" width="50px">
+                </figure>
+                <figcaption>Vinho Português Terra Mãe tinto 750 ml
+                    30,90
+                    </figcaption>
+        </section>
+        <hr>
+        <section id="Higiene e limpeza">
+                <h1>Higiene e limpeza</h1>
+                <figure>
+                    <img src="imagens/img27.png" width="50px">
+                </figure>
+                <figcaption>Vinho Português Terra Mãe tinto 750 ml
+                    30,90
+                    </figcaption>
+                <figure>
+                    <img src="imagens/img28.png" width="50px">
+                </figure>
+                <figcaption>Kit toalha umedecida Johnson’s c/ 48 unidades Leve 4 Pague 3
+                    32,89</figcaption>
+                <figure>
+                    <img src="imagens/img29.png" width="50px">
+                </figure>
+                <figcaption>Lava roupas concentrado Ariel fragrâncias 1,2 L
+                    17,90
+                    </figcaption>
+                <figure>
+                    <img src="imagens/img30.png" width="50px">
+                </figure>
+                <figcaption>Limpador Veja Gold multiuso original 500 ml com 10% de desconto
+                    2,99</figcaption>
+                <figure>
+                    <img src="imagens/img31.png" width="50px">
+                </figure>
+                <figcaption>Papel higiênico Neve folha dupla ou tripla 20/30 metros com 4 unidades
+                    6,99</figcaption>
+        </section>
+        <hr>
+        <section id="Verduras e Legumes">
+            '<h1>Verduras e Legumes</h1>'
+                <figure>
+                    <img src="imagens/img32.png" width="50px">
+                </figure>
+                <figcaption>Abobrinha italiana kg
+                    1,99</figcaption>
+                <figure>
+                    <img src="imagens/img33.png" width="50px">
+                </figure>
+                <figcaption>Alho Roxo cada 100g
+                    2,89
+                    </figcaption>
+                <figure>
+                    <img src="imagens/img34.png" width="50px">
+                </figure>
+                <figcaption>Batata doce rosada kg
+                    1,99</figcaption>
+                <figure>
+                    <img src="imagens/img35.png" width="50px">
+                </figure>
+                <figcaption>Berinjela kg
+                    3,89</figcaption>
+                <figure>
+                    <img src="imagens/img36.png" width="50px">
+                </figure>
+                <figcaption>Cebola kg
+                    4,49</figcaption>
+                <figure>
+                    <img src="imagens/img37.png" width="50px">
+                </figure>
+                <figcaption>Linguiça calabresa defumada Seara a granel kg 18,59</figcaption>
+                <figure>
+                        <img src="imagens/img42.png" width="50px">
+                    </figure>
+                    <figcaption>Mandioquinha kg
+                        6,99
+                        </figcaption>
+                    <figure>
+                        <img src="imagens/img44.png" width="50px">
+                    </figure>
+                    <figcaption>Pepino japonês kg
+                        2,99</figcaption>
+                    <figure>
+                        <img src="imagens/img45.png" width="50px">
+                    </figure>
+                    <figcaption>Pimentão verde kg
+                        3,79</figcaption>
+                    <figure>
+                        <img src="imagens/img46.png" width="50px">
+                    </figure>
+                    <figcaption>Tomate carmem kg
+                        3,99</figcaption>
+                    <figure>
+                        <img src="imagens/img47.png" width="50px">
+                    </figure>
+                    <figcaption>Tomate Grape Mel Trebeschi 180 g
+                        2,39
+                        </figcaption>
+        </section>
+        <hr>
+        <section id="Frutas">
+                <h1>Frutas</h1>
+                    <figure>
+                        <img src="imagens/img57.png" width="50px">
+                    </figure>
+                    <figcaption>Manga tommy kg
+                        3,99</figcaption>
+                    <figure>
+                        <img src="imagens/img58.png" width="50px">
+                    </figure>
+                    <figcaption>Maracujá azedo kg
+                        5,99</figcaption>
+                    <figure>
+                        <img src="imagens/img59.png" width="50px">
+                    </figure>
+                    <figcaption>Mexerica ponkan kg
+                        2,89</figcaption>
+                    <figure>
+                        <img src="imagens/img60.png" width="50px">
+                    </figure>
+                    <figcaption>Pera williams kg
+                        7,99
+                        </figcaption>
+                    <figure>
+                        <img src="imagens/img61.png" width="50px">
+                    </figure>
+                    <figcaption>Uva branca bandeja 500 g
+                        5,99</figcaption>
+                    <figure>
+                        <img src="imagens/img62.png" width="50px">
+                    </figure>
+                    <figcaption>Uva preta bandeja 500 g
+                        6,49</figcaption>
+                    <figure>
+                        <img src="imagens/img49.png" width="50px">
+                    </figure>
+                    <figcaption>Abacate kg
+                        4,59</figcaption>
+                    <figure>
+                        <img src="imagens/img50.png" width="50px">
+                    </figure>
+                    <figcaption>Caqui fuyu kg
+                        4,99 Caqu</figcaption>
+                    <figure>
+                        <img src="imagens/img51.png" width="50px">
+                    </figure>
+                    <figcaption>Goiaba vermelha kg
+                        3,99
+                        </figcaption>
+                    <figure>
+                        <img src="imagens/img52.png" width="50px">
+                    </figure>
+                    <figcaption>Laranja pera kg
+                        2,79</figcaption>
+                    <figure>
+                        <img src="imagens/img53.png" width="50px">
+                    </figure>
+                    <figcaption>Limão taiti kg
+                        1,99</figcaption>
+                    <figure>
+                        <img src="imagens/img54.png" width="50px">
+                    </figure>
+                    <figcaption>Maçã Fuji kg
+                        4,99</figcaption>
+                    <figure>
+                        <img src="imagens/img55.png" width="50px">
+                    </figure>
+                    <figcaption>Maçã Senninha pacote 1kg
+                        4,49</figcaption>
+                    <figure>
+                        <img src="imagens/img56.png" width="50px">
+                    </figure>
+                    <figcaption>Mamão papaya unid.
+                        2,99
+                        </figcaption>
+                    <figure>
+                        <img src="imagens/img48.png" width="50px">
+                    </figure>
+                    <figcaption>Abacaxi pérola unid.
+                        5,39</figcaption>
+        </section>
+        <hr>
+        <section id="Peixes e Derivados">
+                    <h1>Peixes e Derivados</h1>
+                    <figure>
+                        <img src="imagens/img38.png" width="50px">
+                    </figure>
+                    <figcaption>Tilápia inteira fresca kg
+                        17,99</figcaption>
+                    <figure>
+                        <img src="imagens/img39.png" width="50px">
+                    </figure>
+                    <figcaption>Tambaqui de cativeiro inteiro fresco kg
+                        21,79</figcaption>
+                    <figure>
+                        <img src="imagens/img40.png" width="50px">
+                    </figure>
+                    <figcaption>Pintado de cativeiro inteiro fresco kg
+                        28,99
+                        </figcaption>
+                    <figure>
+                        <img src="imagens/img41.png" width="50px">
+                    </figure>
+                    <figcaption>Camarão Oceani descascado cozido congelado 400 g
+                        39,99</figcaption>
+        </section>
+        </section>
         <form>
             Nome:<input type="name" name="name" id="name"><br>
             E-mail:<input type="e-mail" name="e-mail" id="email"><br>
